reset form and fix spacing

--- a/_sass/_sponsor.scss
+++ b/_sass/_sponsor.scss
@@ -468,6 +468,7 @@
 
 .contact-form {
     #sponsorship-form-feedback > div {
+        margin-top: 2em;
         font-weight: bold;
         background: linear-gradient(to left, $dark-pink, lighten($dark-purple, 10%));
         color: #fff;
